update 12/4 by Luong Gia Tuan

--- a/QLNHATHUOC/pom.xml
+++ b/QLNHATHUOC/pom.xml
@@ -6,6 +6,12 @@
   <name>QLNHATHUOC</name>
   <dependencies>
   <dependency>
+    <groupId>net.java.timingframework</groupId>
+    <artifactId>timingframework-swing</artifactId>
+    <version>4.1.0</version>
+</dependency>
+  
+  <dependency>
 	<groupId>net.java.dev.timingframework</groupId>
 	<artifactId>timingframework</artifactId>
 	<version>1.0</version>
@@ -15,7 +21,8 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
    </dependency>
-   
+  
+
    
    
   </dependencies>
